--- a/app/src/main/res/layout/activity_spash_screen.xml
+++ b/app/src/main/res/layout/activity_spash_screen.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1516A"
+    android:background="#ffffff"
     tools:context="com.example.android.ckho.SpashScreen">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:src="@drawable/ckho_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
