--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:clipToPadding="true"
+    android:fillViewport="true"
+    android:scrollbarStyle="insideOverlay">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -40,14 +51,14 @@
                 android:textSize="20dp"
                 android:layout_marginTop="5dp"
                 android:textStyle="bold"
-                android:textColor="#ffffff"
+                android:textColor="#000000"
                 android:layout_gravity="center"
                 android:text="Display Name"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profile_id"
-                android:textColor="#ffffff"
+                android:textColor="#000000"
                 android:textSize="18dp"
                 android:padding="5dp"
                 android:layout_gravity="center"
@@ -65,11 +76,13 @@
 
     </LinearLayout>
 
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Upcoming Events"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textStyle="italic|bold"
             android:textSize="18dp"
             android:padding="15dp"/>
@@ -98,7 +111,7 @@
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:layout_gravity="center_horizontal|center_vertical"
         android:textAppearance="?android:textAppearanceMedium"/>
 
@@ -106,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Past Events"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="18dp"
             android:textStyle="italic|bold"
             android:padding="15dp"/>
@@ -123,3 +136,4 @@
 
 
 </LinearLayout>
+</ScrollView>
